@@ -760,7 +760,10 @@ class Title {
 						$query = $matches[1];
 						if( isset( $matches[4] ) ) $query .= $matches[4];
 						$url = str_replace( '$1', $dbkey, $wgActionPaths[$action] );
-						if( $query != '' ) $url .= '?' . $query;
+						if( $query != '' ) {
+							$url .= ( strpos( $wgActionPaths[$action], '?' ) 
+										=== false ? '?' : '&' ) . $query;
+						}
 					}
 				}
 				if ( $url === false ) {
